# barricade

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
barricade/: __init__.py  __main__.py  _benchmarking.py  _shared.py  _state_inspector.py  _task_shape_prior.py  _validation.py  _verification_parser.py  _version.py  dispatch.py  mcp_server.py  problem_ir.py  runtime.py  scaling.py  workflow.py  workflow_intake.py
barricade/executor/: __init__.py  _parsing.py  _protocol.py  _scoring.py  registry.py
barricade/feed_derived_dna/: __init__.py  _operators.py  _outcome_memory.py  analysis.py  constants.py  controller.py  evolution.py  models.py  persistence.py  pipeline.py  tasks.py
docs/: api_reference.md  architecture.md  barricade_AB.md  history.md  phases.md  tests.md
docs/comparison/: ab_testing_results.md  bft_ab_test.md  sudoku_ab_test.md
tests/: conftest.py  deep_emergence_probe.py  emergence_probe.py  extrapolation_probe.py  proof_probe.py  test_action_layer.py  test_barricade_runtime.py  test_e2e_execution.py  test_extrapolation.py  test_extrapolation_probe_evidence.py  test_extreme_validation.py  test_mcp_server.py  test_mcp_target_scenarios.py  test_mcp_tool_descriptions.py  test_new_capabilities.py  test_performance.py  test_phase1_persistence.py  test_phase2_dispatch.py  test_phase3_workflow.py  test_phase4_scaling.py  test_proof_probe_evidence.py  test_rotation_market_signal.py
